# slack-thug

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  docker-compose.yml  pyproject.toml
src/slack_thug/: app.py  db.py  event.py  slack.py  thugify.py  worker.py
tests/: conftest.py  payload.py  test_integration.py
